<resources>
    <string name="app_name">IdolSnap</string>

    <string name="home">Home</string>
    <string name="Search">Search</string>
    <string name="Create">Create</string>
    <string name="notification">Notifications</string>
    <string name="profile">Profile</string>

    <string name="auth_continueGoogle">Continue with Google</string>
    <string name="auth_title">Keep on\nStanning with\nIdol<font color='#FB3958'>Snap</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="resetpassword">Reset Password</string>
    <string name="resetpswddesc">You will receive a link to create a new password via email.</string>
    <string name="emailsent">Email is sent</string>
    <string name="alreadyhaveanaccount">Already have an account? <font color='#FB3958'>Sign In</font></string>
    <string name="donthaveanaccountyet">Don\'t have an account yet? <font color='#FB3958'>Sign Up</font></string>
    <string name="emailverification">Email Verification</string>
    <string name="processing">Processing...</string>
    <string name="pleaseverifyemail">Please check your email inbox and verify your account</string>
    <string name="main_failedtoauthenticateuser">Failed to authenticate account</string>
    <string name="complete">Complete</string>
    <string name="bias_chooseidol">Choose your favorite idols</string>
    <string name="bias_chooseupto5">You can choose up to 5 artists</string>
    <string name="setupcomplete">Account Setup Complete!</string>
    <string name="max10photosonpost">You can choose up to 10 pictures</string>
    <string name="description">Description</string>
    <string name="addsnapdescription">Add Snap Description</string>
    <string name="createsnap">Create Snap</string>
    <string name="hashtagrequired">At least 1 hashtag is required!</string>
    <string name="imagecompressfailed">Failed to compress image </string>
    <string name="readmore"> ...more</string>
    <string name="comment">Comment</string>
    <string name="snapuploaded">Snap Uploaded!</string>
    <string name="commentuploaded">Comment Uploaded!</string>
    <string name="commenthint">Enter comment...</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="recommendation">All</string>
    <string name="snap">Snap</string>
    <string name="snaps">Snaps</string>
    <string name="collection">Collection</string>
    <string name="username_taken">This username has already been taken.</string>
    <string name="nosnapcreatedyet">You haven\'t created any Snap yet</string>
    <string name="snapdeleted">Snap Deleted!</string>
    <string name="createcollection">Create Collection</string>
    <string name="collectionname">Collection name</string>
    <string name="savetocollection">Save to Collection</string>
    <string name="editcollection">Edit Collection</string>
    <string name="collectioneditcomplete">Completed changing collection settings!</string>
    <string name="deletecollection">Delete Collection</string>
    <string name="collectiondeleted">Collection Deleted!</string>
    <string name="alert_title">Notice</string>
    <string name="alert_button_text">Close</string>
    <string name="alert_deletecollectiondesc">Are you sure you want to delete this Collection? Once the Collection is deleted, you won\'t be able to recover it.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="alert_deletesnap">Delete Snap</string>
    <string name="alert_deletesnapdesc">Are you sure you want to delete this Snap? Once the Snap is deleted, you won\'t be able to recover it.</string>
    <string name="visibility">Visibility</string>
    <string name="keepcollectionprivate">Keep this collection private</string>
    <string name="share">Share</string>
    <string name="link">Link</string>
    <string name="edit">Edit</string>
    <string name="hide">Hide</string>
    <string name="report">Report</string>
    <string name="editsnap">Edit Snap</string>
    <string name="editcomplete">Edit complete!</string>
    <string name="editprofile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="setdefaultprofilepicture">Set Default Profile Photo</string>
    <string name="imagesize5mb">Images exceeding 5MB cannot be uploaded.</string>
    <string name="suggestedforyou">Suggested for you</string>
    <string name="user">User</string>
    <string name="hashtag">Hashtag</string>
    <string name="accountstrikerecord">Account Strike Records</string>
    <string name="addsource">Add Source</string>
    <string name="source">Source</string>
    <string name="urlnotrecommende">URL is not recommended</string>
    <string name="signout">Sign Out</string>
    <string name="followers">Followers</string>
    <string name="reportsent">Report sent</string>
    <string name="alreadyreported">Report has already been made</string>
    <string name="report_desc">Upon receipt of the report, the administrator will review the report and take an appropriate action regarding the review result.</string>
    <string name="suggestedfollows">Suggested follows</string>
    <string name="welcome">Welcome</string>
    <string name="homenofollowdesc">Follow a user and check out recent content here</string>
    <string name="imagesaved">Image saved.</string>
    <string name="idolsnap">Idol<font color='#FB3958'>Snap</font></string>
    <string name="Contentpreference">Content preference</string>
    <string name="orderbytrending">Order by trending</string>
    <string name="orderbylatest">Order by latest</string>
    <string name="hashtagsonasnap">You can use up to 20 hashtags on a snap.</string>
    <string name="followupto250">You can follow up to 250 people per account</string>
    <string name="allsnap">All Snap</string>
    <string name="none">None</string>
    <string name="unfollow">Unfollow</string>
    <string name="receivenotification">Receive notifications.</string>
    <string name="notificationturnedoff">Notifications turned off.</string>
    <string name="sponsored">Sponsored</string>
    <string name="newsnap">New Snap</string>
    <string name="newcomment">New Comment</string>
    <string name="newsnaplike">Snap Like</string>
    <string name="newfollower">New Follower</string>
    <string name="permissionfornotificationsrequired">Permission for notifications is required.</string>
    <string name="permissionforexternalstoragerequired">Permission to read external storage is required.</string>
    <string name="permissionforreadmediaimagesrequired">Permission to read photos and videos is required.</string>
    <string name="permissionforwriteexternalstoragerequired">Permission to write external storage is required.</string>
    <string name="alert_deleteNotification">Delete Notification</string>
    <string name="deleteanyway">Delete anyway</string>
    <string name="notificationsautomaticallydeleted">Notifications are automatically deleted after 30 days.</string>
    <string name="recentnotifications">Recent notifications</string>
    <string name="loading...">Loading...</string>
    <string name="hiddensnap">Hidden Snap</string>
    <string name="hiddensnap_desc">You have hidden this snap, so its contents will be blurred and will no longer be visible to your account.</string>
    <string name="unhidesnap">Unhide Snap</string>
    <string name="allowcomments">Allow comments</string>
    <string name="restrictedcomments">Comments for this snap have been restricted.</string>
    <string name="auth_notice">By continuing, you agree to IdolSnap\'s Terms of Service and acknowledge that you\'ve read our Privacy Policy.</string>
    <string name="undermaintenance">Service Under Maintenance</string>
    <string name="refresh">Refresh</string>
    <string name="closeapp">Close App</string>
    <string name="accountinfo">Account Info</string>
    <string name="accountcreateddate">Account created date</string>
    <string name="accountid">Account ID</string>
    <string name="about">About</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termsofservice">Terms of Service</string>
    <string name="opensourcelibrary">Open Source Library</string>
    <string name="consent">Consent</string>
    <string name="agree">Agree</string>
    <string name="donotagree">Do not agree</string>
    <string name="consent_desc">Do you consent to interest-based advertising. Your ad will be relevant to your interest. You can always change the withdraw from this consent in settings.</string>
    <string name="advertisement">Advertisement</string>
    <string name="like">Like</string>
    <string name="unfollowbeforehide">Unfollow the user before hiding.</string>
    <string name="userhiddencomplete">User will no longer be recommended to you.</string>
    <string name="hiddensnapuser">Hidden Snap/User</string>
</resources>