<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/primaryBackgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/alert_vertguideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/alert_vertguideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <TextView
        android:id="@+id/alert_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/plusjakartasans_semibold"
        android:text="@string/consent"
        android:textColor="?attr/primaryTextColor"
        android:textSize="32dp"
        app:layout_constraintLeft_toRightOf="@id/alert_vertguideline1"
        app:layout_constraintRight_toLeftOf="@id/alert_vertguideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alert_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/plusjakartasans_medium"
        android:text="@string/consent_desc"
        android:textColor="?attr/primaryTextColor"
        android:textSize="14dp"
        app:layout_constraintLeft_toRightOf="@id/alert_vertguideline1"
        app:layout_constraintRight_toLeftOf="@id/alert_vertguideline2"
        app:layout_constraintTop_toBottomOf="@id/alert_title" />

    <ProgressBar
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/consent_progressbar"
        android:indeterminateTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/alert_desc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/consent_agreeCardview"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="17dp"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toRightOf="@id/alert_vertguideline1"
        app:layout_constraintRight_toLeftOf="@id/alert_vertguideline2"
        app:layout_constraintTop_toBottomOf="@id/alert_desc">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:fontFamily="@font/plusjakartasans_medium"
            android:gravity="center"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:visibility="visible" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/consent_donotagree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/alert_vertguideline2"
        app:layout_constraintLeft_toRightOf="@id/alert_vertguideline1"
        android:text="@string/donotagree"
        android:fontFamily="@font/plusjakartasans_medium"
        android:textSize="14dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/grey"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/consent_agreeCardview"/>
</androidx.constraintlayout.widget.ConstraintLayout>