<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryBackgroundColor"
    tools:context="com.euichankim.idolsnapandroid.Activity.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/primaryBackgroundColor"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/settings_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:adjustViewBounds="true"
            android:background="?attr/primaryBackgroundColor"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_backward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/primaryTextColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:gravity="center|start"
            android:paddingBottom="4dp"
            android:text="@string/settings"
            android:textColor="?attr/primaryTextColor"
            android:textSize="19dp"
            app:layout_constraintLeft_toRightOf="@id/settings_backBtn"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_toolbar">

        <LinearLayout
            android:id="@+id/settings_accountinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_profile"
                app:tint="?attr/primaryTextColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_medium"
                android:paddingStart="16dp"
                android:text="@string/accountinfo"
                android:textColor="?attr/primaryTextColor"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_userAccountStrike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_report"
                app:tint="?attr/primaryTextColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_medium"
                android:paddingStart="16dp"
                android:text="@string/accountstrikerecord"
                android:textColor="?attr/primaryTextColor"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_hiddensnapuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_hide"
                app:tint="?attr/primaryTextColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_medium"
                android:paddingStart="16dp"
                android:text="@string/hiddensnapuser"
                android:textColor="?attr/primaryTextColor"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_information"
                app:tint="?attr/primaryTextColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_medium"
                android:paddingStart="16dp"
                android:text="@string/about"
                android:textColor="?attr/primaryTextColor"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_megaphone"
                app:tint="?attr/primaryTextColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_medium"
                android:paddingStart="16dp"
                android:text="@string/advertisement"
                android:textColor="?attr/primaryTextColor"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_signout"
                app:tint="?attr/primaryTextColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_medium"
                android:paddingStart="16dp"
                android:text="@string/signout"
                android:textColor="?attr/primaryTextColor"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>