<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/primaryBackgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signinbs_vertguideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signinbs_vertguideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signinbs_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/signinbs_closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:adjustViewBounds="true"
            android:background="?attr/primaryBackgroundColor"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/primaryTextColor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/signinbs_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plusjakartasans_semibold"
        android:text="@string/forgotpassword"
        android:textColor="?attr/primaryTextColor"
        android:textSize="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@id/signinbs_vertguideline1"
        app:layout_constraintRight_toLeftOf="@id/signinbs_vertguideline2"
        app:layout_constraintTop_toBottomOf="@id/signinbs_toolbar"/>

    <TextView
        android:id="@+id/signinbs_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/signinbs_vertguideline2"
        app:layout_constraintLeft_toRightOf="@id/signinbs_vertguideline1"
        app:layout_constraintTop_toBottomOf="@id/signinbs_title"
        android:layout_marginTop="16dp"
        android:textColor="?attr/primaryTextColor"
        android:fontFamily="@font/plusjakartasans_medium"
        android:textSize="17dp"
        android:text="@string/resetpswddesc"/>

    <EditText
        android:id="@+id/signinbs_emailEdtx"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/background_edittext_custom"
        android:fontFamily="@font/plusjakartasans_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="?attr/primaryTextColor"
        android:textColorHint="@color/grey"
        android:textSize="17dp"
        app:layout_constraintRight_toLeftOf="@id/signinbs_vertguideline2"
        app:layout_constraintLeft_toRightOf="@id/signinbs_vertguideline1"
        app:layout_constraintTop_toBottomOf="@id/signinbs_desc"
        android:layout_marginTop="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/signinbs_resetPswd"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintRight_toLeftOf="@id/signinbs_vertguideline2"
        app:layout_constraintLeft_toRightOf="@id/signinbs_vertguideline1"
        app:layout_constraintTop_toBottomOf="@id/signinbs_emailEdtx"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/red">
        <ProgressBar
            android:id="@+id/signinbs_progressbar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"/>
        <TextView
            android:id="@+id/signinbs_resetpswdTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/resetpassword"
            android:gravity="center"
            android:textSize="17dp"
            android:clickable="false"
            android:visibility="visible"
            android:textColor="@color/white"
            android:fontFamily="@font/plusjakartasans_medium"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>